--- a/manifest.json
+++ b/manifest.json
@@ -11,5 +11,11 @@
 		"default_title": "Dota Stat Switcher",
 		"default_popup": "popup.html"
   	},
+  	"icons": {
+  		"16": "dota_stat_switcher_16.png",
+	    "32": "dota_stat_switcher_32.png",
+	    "48": "dota_stat_switcher_48.png",
+  		"128": "dota_stat_switcher_128.png"
+  	},
   	"manifest_version": 2
 }
