cleaned up code files and organization of images

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 	"name": "DOTA 2 Stat Switcher",
 	"description": "Switch between dota stat site pages",
 	"version": "0.1",
-	"permissions": ["storage", "tabs", "https://www.steamcommunity.com/", "https://steamcommunity.com/"],
+	"permissions": ["tabs", "https://www.steamcommunity.com/", "https://steamcommunity.com/"],
 	"background": {
 	    "scripts": ["jquery-3.4.1.min.js", "background.js"],
 	    "persistent": false
@@ -19,3 +19,5 @@
   	},
   	"manifest_version": 2
 }
+
+//"permissions": ["storage", "tabs", "https://www.steamcommunity.com/", "https://steamcommunity.com/"],
