--- a/manifest.json
+++ b/manifest.json
@@ -17,6 +17,7 @@
 	    "48": "dota_stat_switcher_48.png",
   		"128": "dota_stat_switcher_128.png"
   	},
+	"content_security_policy": "script-src 'self' https://ajax.googleapis.com; object-src 'self'",
   	"manifest_version": 2
 }
 
