Cleanup + active_page switch
Cleaned up a bunch of unncessary code; Changed names of variables to be more descriptive; Updated to be page_action instead of browser_action so the icon would only be available on relevant websites

--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,20 @@
 {
 	"name": "DOTA 2 Stat Switcher",
 	"description": "Switch between dota stat site pages",
-	"version": "0.3",
-	"permissions": ["tabs", "https://www.steamcommunity.com/", "https://steamcommunity.com/"],
+	"version": "0.4",
+	"permissions": ["tabs", "https://www.steamcommunity.com/", "https://steamcommunity.com/", "declarativeContent"],
 	"background": {
 	    "scripts": ["background.js"],
 	    "persistent": false
 	  },
-	"browser_action": {
+	"page_action": {
 		"default_title": "Dota Stat Switcher",
 		"default_popup": "popup.html"
-  	},
+    },
   	"icons": {
-  		"16": "dota_stat_switcher_16.png",
-	    "32": "dota_stat_switcher_32.png",
-	    "48": "dota_stat_switcher_48.png",
+  		"16":  "dota_stat_switcher_16.png",
+	    "32":  "dota_stat_switcher_32.png",
+	    "48":  "dota_stat_switcher_48.png",
   		"128": "dota_stat_switcher_128.png"
   	},
 	"content_security_policy": "script-src 'self' https://ajax.googleapis.com; object-src 'self'",
